--- a/style.css
+++ b/style.css
@@ -116,3 +116,208 @@ font-size: 2.5vw;
     margin-bottom: -1px !important;
 }
 
+
+
+
+/* trophy section start */
+.trophy-header{
+    background-color: rgb(150,150,150);
+    font-size: 3vw;
+    font-family: 'Oswald', bold;
+    text-align: center;
+    margin: auto;
+    color: rgb(221,183,36);
+}
+
+.trophy-head{
+    width: 10%;
+    padding-right: 6%;
+}
+
+.trophy-complete{
+    width: 40%;
+}
+
+.trophy-list{
+    padding-left: 15%;
+    width: 45%;
+}
+
+.trophy-name{
+    text-align: center;
+    font-size: 2.5vw;
+    font-family: 'Oswald', bold;
+}
+
+.trophy-description{
+    text-align: center;
+    color: grey;
+}
+
+.trophy-container{
+    padding-bottom: 1%;
+    padding-top: 1%;
+}
+
+.trophy-hr{
+    margin: auto;
+    width: 70%;
+}
+
+/* trophy section end */
+
+
+/* booblehead section start */
+
+.image-container{
+    background-color: black;
+}
+
+.booblehead-background{
+    opacity: 0.2;
+}
+
+.boobleheads-napis{
+    position: absolute;
+    background: none;
+    text-align: center;
+    font-size: 11vw;
+    font-family: 'Rubik Distressed', cursive;
+    color: rgb(221,183,36,0.6);
+    margin-top: -450px !important;
+    margin-left: 200px;
+    transform: rotate(-15deg);
+        
+}
+
+.boobleheadmap{
+    background-color:  rgb(236,235,232);
+}
+
+
+.hide{
+    background-color: white;
+    border-radius: 10px;
+    text-align: center;
+    position: absolute;
+    margin: 0 auto;
+    padding: 2%;
+}
+
+
+.hide p{
+    font-family: 'Oswald', bold;
+    text-align: center;
+}
+
+.location{
+    color:grey
+}
+
+.unsearch {
+    color:red;
+}
+.perception-booblehead-description{
+    margin: -80px;
+    margin-left: 100px
+}
+
+.explosive-booblehead-description{
+    margin: -60px;
+    margin-left: 470px;
+}
+
+.repair-booblehead-description{
+    margin: 50px;
+    margin-left: 180px;
+}
+
+.luck-booblehead-description{
+    margin: 380px;
+    margin-left: 560px;
+}
+
+.agility-booblehead-description{
+    margin: 430px;
+    margin-left: 480px;
+}
+
+.endurance-booblehead-description{
+    margin: 450px;
+    margin-left: 420px;
+}
+
+.unarmed-booblehead-description{
+    margin: 390px;
+    margin-left: 390px;
+}
+
+.smallguns-booblehead-description{
+    margin: 400px;
+    margin-left: 170px;
+}
+
+.bigguns-booblehead-description{
+    margin: 470px;
+    margin-left: 70px;
+}
+
+.medicine-booblehead-description{
+    margin: 230px;
+    margin-left: 140px;
+}
+
+.intelligence-booblehead-description{
+    margin: 230px;
+    margin-left: 240px;
+}
+
+.meele-booblehead-description{
+    margin: 240px;
+    margin-left: 250px;
+}
+
+.lock-booblehead-description{
+    margin: 140px;
+    margin-left: 350px;
+}
+
+.barter-booblehead-description{
+    margin: -30px;
+    margin-left: 550px;
+}
+
+.sneak-booblehead-description{
+    margin: -60px;
+    margin-left: 500px;
+}
+
+.science-booblehead-description{
+    margin: -40px;
+    margin-left: 380px;
+}
+
+.speech-booblehead-description{
+    margin: 200px;
+    margin-left: 350px;
+}
+
+.strength-booblehead-description{
+    margin: 170px;
+    margin-left: 400px;
+}
+
+.charisma-booblehead-description{
+    margin: -120px;
+    margin-left: 400px;
+}
+
+.energyweapon-booblehead-description{
+    margin: 180px;
+    margin-left: 100px;
+
+}
+
+
+
+/* booblehead section end */
