--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ font-size: 2.5vw;
     font-family: 'Oswald', sans-serif;
     font-size: 1.5vw;
     padding-left: 8%;
-    padding-bottom: 3%;
+    padding-bottom: 1%;
 }
 
 .boobleheadmap{
@@ -203,11 +203,21 @@ font-size: 2.5vw;
 
 
 .boobleheadimage{
-    width: 70%;
+    width: 40%;
+    padding-top: 8%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .booblehead-description{
     padding-bottom: 6%;
+}
+
+.booble-game-description{
+    font-size: 1.7vw;
+    font-family: 'Oswald', sans-serif;
+    text-align: justify;
 }
 
 .hide{
@@ -218,7 +228,6 @@ font-size: 2.5vw;
     margin: 0 auto;
     padding: 2%;
 }
-
 
 
 .location{
@@ -408,4 +417,121 @@ font-size: 2.5vw;
 #energyweapon-button{
     margin-right: 5%;
 }
+
+.booblehead-center{
+    background-color: black;
+    padding-bottom: 3%;
+    padding-top: 3%;
+
+}
+
+.side-booble{
+    width: 30%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.center-booble{
+    width: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.booble-popis-vnimani{
+    color: rgb(221,183,36);
+    font-family: 'Oswald', sans-serif;
+    font-size: 2vw;
+    text-align: center;  
+}
+
+.booble-popis-rychlost{
+    color: rgb(221,183,36);
+    font-family: 'Oswald', sans-serif;
+    font-size: 2vw;
+    text-align: center;  
+}
+
+
+
+.booble-popis-hbitost{
+    color: rgb(221,183,36);
+    font-family: 'Oswald', sans-serif;
+    font-size: 2vw;
+    text-align: center;
+}
+
+.text-booble{
+    padding-top: 5%;
+    color: rgb(221,183,36);
+    font-family: 'Oswald', sans-serif;
+    font-size: 3.5vw;
+    text-align: center;
+}
+
+.booblehead-list-container{
+    padding-top: 3%;
+    background-color:  rgb(236,235,232);
+    padding-right: 7%;
+}
+
+.booblehead-image{
+    width: 30%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+.booble-name{
+    text-align: center;
+    font-size: 1.8vw;
+    font-family: 'Oswald', bold;
+}
+
+.booble-description{
+    text-align: center;
+    color: grey;
+    font-family: sans-serif;
+    font-size: 1.2vw;
+    padding-top: 1%;
+}
+
+.booble-hr{
+    margin: auto;
+    width: 80%;
+}
+
+.map-image{
+    padding-top: 14%;
+    width: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.go-to-map{
+    font-size: 5vw;
+    font-family: 'Oswald', bold;
+    text-align: center;
+    margin: auto;
+}
+
+.go-to-map :hover{
+    color: rgb(221,183,36);
+}
+
+.go-to-map a {
+    all: unset;    
+}
 /* booblehead section end */
+
+
+
+/* booblehead section end */
+.map-row{
+    padding-top: 4%;
+}
+
